Fix white background overflow in body

--- a/app/assets/stylesheets/shame-geo.scss
+++ b/app/assets/stylesheets/shame-geo.scss
@@ -1,3 +1,7 @@
+body {
+    background: $light-gray;
+}
+
 .search-bar-overlay {
     position: absolute;
     top: 423px;
